--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>meetup-sorteio</title>
+
+    <style>
+      body {
+        font-family: "Avenir", Helvetica, Arial, sans-serif;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+
+      h1 {
+        text-align: center;
+        padding: 40px;
+      }
+    </style>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but meetup-sorteio doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong
+        >We're sorry but meetup-sorteio doesn't work properly without JavaScript
+        enabled. Please enable it to continue.</strong
+      >
     </noscript>
+
+    <h1>
+      Sorteio de Participantes do Meetup.com
+    </h1>
+
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
