--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,13 @@
         -moz-osx-font-smoothing: grayscale;
       }
 
+      img {
+        margin: 30px auto;
+        width: 200px;
+        display: flex;
+        margin-bottom: -15px;
+      }
+
       h1 {
         text-align: center;
         padding: 40px;
@@ -27,6 +34,8 @@
         enabled. Please enable it to continue.</strong
       >
     </noscript>
+
+    <img src="./img/m_swarm_630x630.png" alt="" />
 
     <h1>
       Sorteio de Participantes do Meetup.com
