adjusted roullete timers

--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,14 @@
         max-width: 312px;
         margin: 0 auto;
         align-items: center;
+        margin-top: 15px;
       }
 
       .logo-wrapper > img {
         width: 148px;
+      }
+      .logo-wrapper > img:nth-child(2) {
+        width: 218px;
       }
 
       .app-header {
