added jequiti and octacat

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>Meetup Roullete</title>
+    <title>Meetup Roulette</title>
 
     <style>
       body {
@@ -34,7 +34,7 @@
         margin: 30px auto;
       }
 
-      h1 {
+      h1.main-title {
         text-align: center;
       }
     </style>
@@ -53,7 +53,7 @@
     </div>
 
     <div class="text-center app-header">
-      <h1>
+      <h1 class="main-title">
         Silvio's Roullete
       </h1>
 
